tests/snapshots/workspaces__deploy_contract_self_upgrade-2.snap
---
source: tests/workspaces.rs
expression: get_comment_posts
---
[
  {
    "post_version": "V0",
    "id": {
      "$serde_json::private::Number": "2"
    },
    "author_id": "devgovgigs.near",
    "likes": [],
    "snapshot": {
      "editor_id": "devgovgigs.near",
      "timestamp": "[timestamp]",
      "labels": [],
      "post_type": "Comment",
      "comment_version": "V2",
      "description": "This is test Comment."
    },
    "snapshot_history": []
  }
]
